# ToDoList_Aiogram_Django

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.bot  README.md  config.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
ToDoList_project/: asgi.py  celery.py  settings.py  tasks.py  telegram_api.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_user_alter_category_description_task.py  0003_user_telegram_id.py  0004_task_created_at.py  0005_remove_user_id_alter_user_telegram_id.py  0006_remove_task_status.py
bot/: base_handlers.py  bot.py  config.py  fsm_states.py  keyboards_menu.py  text_templates.py  utils.py
bot/dialogs/: create_task.py
telegram_app/: base_handlers.py  text_templates.py  utils.py
telegram_app/dialogs/: common.py  create_task.py  start_menu.py  users_tasks.py
